EZ-1133 fix exercise info items on small screens

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -243,9 +243,15 @@ nav.crumb-wrap .breadcrumb:before {
     }
 }
 
+#exercise-card .ex-info-item {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 #exercise-card .subheading {
     color: #4DAB54;
     font-weight: 500;
+    margin-right: 0.5rem;
 }
 
 #exercise-card h2 {
